# multiCAD-mcp

./: .gitignore  README.md  README_zh-CN.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  security.yml  windows-ci.yml
data/profiles/: chemical_pfd.json  chemical_pid.json  general_2d.json  image_reconstruction.json  university_mechanical_drawing.json
docs/: 01-SETUP.md  02-ARCHITECTURE.md  03-CHANGELOG.md  04-TROUBLESHOOTING.md  05-REFERENCE.md  CAD_BACKGROUND_AUDIT.md  CAD_MEMORY_VALIDATION.md  CAD_OCR.md  CAD_SAFETY_HARDENING.md  CAD_TASK_TRACKING.md  CAD_UX_IMPROVEMENTS.md  CAD_VISION_BENCHMARK.json  CAD_VISION_BENCHMARK.md  CAD_VISION_PIPELINE.md  README.md  SECURITY_AUDIT.md
scripts/: Backup-CAD-Drawing.py  Check-CAD-Memory-Migration.py  Initialize-AI-DrawingTemplate.ps1  Install-CAD-AI-Shortcut.ps1  Run-CAD-Task-Tracking-Acceptance.py  Start-CAD-AI.ps1  Sync-CAD-Profiles.py  benchmark_cad_ocr.py  benchmark_cad_vision.py  check_repository_hygiene.py
skill-candidate/autocad-drawing-assistant/: SKILL.md
skill-candidate/autocad-drawing-assistant/agents/: openai.yaml
src/: __version__.py  config.json  server.py  server_memory.py
src/adapters/: adapter_manager.py  autocad_adapter.py
src/adapters/mixins/: __init__.py  block_mixin.py  connection_mixin.py  drawing_mixin.py  entity_mixin.py  export_mixin.py  file_mixin.py  layer_mixin.py  manipulation_mixin.py  selection_mixin.py  utility_mixin.py  view_mixin.py
src/cad_memory/: __init__.py  database.py  executor.py  models.py  provenance.py  receipts.py  task_manager.py  validator.py  verifier.py
src/cad_ux/: __init__.py  backup.py  profiles.py
src/cad_vision/: __init__.py  analyzer.py  audit_renderer.py  dimensions.py  image.py  ocr.py  pdf.py  window_capture.py
src/core/: __init__.py  cad_interface.py  config.py  exceptions.py  models.py
src/mcp_tools/: __init__.py  decorators.py  helpers.py  shorthand.py  strict_mode.py  validator.py
src/mcp_tools/tools/: __init__.py  blocks.py  drawing.py  entities.py  export.py  files.py  layers.py  memory.py  session.py  tasks.py  validation.py  vision.py
src/ui/: __init__.py  resources.py
src/web/: api.py
tests/: __init__.py
tests/manual/: fix_view.py  inspect_entity.py
tests/unit/: test_adapters.py  test_background_audit_renderer.py  test_batch_operations.py  test_cad_memory.py  test_cad_ux_backup.py  test_cad_ux_profiles.py  test_cad_ux_scripts.py  test_cad_vision_analyzer.py  test_cad_vision_dimensions.py  test_cad_vision_ocr.py  test_cad_vision_ocr_language.py  test_cad_vision_tool_registration.py  test_cad_window_capture.py  test_guarded_text.py  test_plan_executor.py  test_plan_validator.py  test_post_verifier.py  test_repository_hygiene.py  test_security.py  test_shorthand.py  test_strict_mode.py  test_task_tracking.py  test_validation_receipts.py  test_validator.py
